Fix .block-2 latter-spacing

--- a/sites/all/themes/occupy/css/global.css
+++ b/sites/all/themes/occupy/css/global.css
@@ -124,7 +124,7 @@ ul li.leaf {
 	padding: 20px 0;
 	width: 100%;
 	color: #3A3A3A;
-	letter-spacing: 0.05em;
+	letter-spacing: 0.07em;
 }
 /*-----------------------------------------NEWSLETTER FORM------------------------------------*/
 .block-15 {
